--- a/env.yml
+++ b/env.yml
@@ -1,4 +1,4 @@
-name: tardis-carsus
+name: tardis
 
 channels:
   - conda-forge
@@ -63,8 +63,6 @@ dependencies:
   - sphinxcontrib-bibtex
   - nbformat
   - nbsphinx
-  - numpydoc
-  - docutils
   - recommonmark
   - pandoc
   - nbconvert
